--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,12 @@
       "warn",
       {
         "newlinesBetween": "always",
-        "groups": ["/^react/", "module", ["parent", "sibling", "index"]],
-        "alphabetize": { "order": "asc", "ignoreCase": true }
+        "groups": [
+          "/^react/",
+          "module",
+          ["parent", "sibling", "index"]
+        ],
+        "alphabetize": {"order": "asc", "ignoreCase": true}
       }
     ]
   }
