--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "d3-shape": "^1.3.7",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-svg": "^9.13.6",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3"
